--- a/Mission.WebUI/Views/Event/_WordCount.cshtml
+++ b/Mission.WebUI/Views/Event/_WordCount.cshtml
@@ -6,7 +6,7 @@
         @foreach (var word in Model)
         {
             <tr>
-                <td>@word.Word</td>
+                <td style="text-transform:capitalize;">@word.Word</td>
                 <td>@word.WordCount</td>
             </tr>
         }
