--- a/Mission.WebUI/Views/Post/Blog.cshtml
+++ b/Mission.WebUI/Views/Post/Blog.cshtml
@@ -1,13 +1,13 @@
 ﻿﻿@using Mission.Domain.Entities
 @using Mission.WebUI.ViewModels
-@model BlogComments
+@model BlogViewModel
 @{
     ViewBag.Title = "Blog";
 }
 <div id="posts-list" class="post-lists-blogg">
     <h2 class="page-heading">
         <span>BLOGG</span></h2>
-        @Html.Partial("_Arkiv")
-        @Html.DisplayFor(p => p.Posts)
+        @Html.Partial("_Arkiv", Model.Arkivmodel)
+        @Html.DisplayFor(p => p.Blogcomments.Posts)
 </div> 
 
