--- a/Mission.WebUI/Views/Event/EventStatistics.cshtml
+++ b/Mission.WebUI/Views/Event/EventStatistics.cshtml
@@ -1,5 +1,4 @@
-﻿m@model Guid
-<script type="text/javascript" src="https://www.google.com/jsapi"></script>
+﻿<script type="text/javascript" src="https://www.google.com/jsapi"></script>
 <script type="text/javascript">
     google.load("visualization", "1", { packages: ["corechart"] });
     $(function () {
