--- a/Mission.WebUI/Views/Home/EditJesperCaron.cshtml
+++ b/Mission.WebUI/Views/Home/EditJesperCaron.cshtml
@@ -1,5 +1,5 @@
 ﻿@using Mission.Domain.Entities
-@model Post
+@model AboutJesper
 
 @{
     ViewBag.Title = "CreatePost";
@@ -11,25 +11,21 @@
     <script src="@Url.Content("~/Content/Kendo/js/jquery.min.js")"></script>
     <script src="@Url.Content("~/Content/Kendo/js/kendo.web.min.js")"></script>
     <script src="@Url.Content("~/Content/Kendo/examples/content/shared/js/console.js")"></script>   
+    <script src="@Url.Content("~/Content/js/resizeable.js")"></script>
 
 
 
 <div id="posts-list">
 
-<h2 class="page-heading"><span>ÄNDRA POST</span></h2>
+<h2 class="page-heading"><span>ÄNDRA JESPER CARON</span></h2>
 
 @using (Html.BeginForm()){
 
     
     <div>
-        <p>
-            Titel     <br />
-           @Html.EditorFor(p => p.Title, new {  cols = "30", style = "width:100%", height = "100%" })
-           
-        </p>
 
 
-         @Html.TextAreaFor(p => p.Body, new { id = "editor", rows="10", cols="30", style="width:100%", height = "100%"})
+         @Html.TextAreaFor(p => p.Content, new { id = "editor", rows="10", cols="30", style="width:100%", height = "100%"})
   
 
     <script>
@@ -59,16 +55,8 @@
                 "superscript"
             ]
         });
-        
+
     </script>
-
-
-
-        <p>         
-           @Html.RadioButtonFor(p => p.Type, 1) Blog
-           @Html.RadioButtonFor(p => p.Type, 0) News          
-        </p>
-
     </div>
     <div>
         <input type="submit" value ="Spara"/>
