--- a/Mission.WebUI/Content/css/skin.css
+++ b/Mission.WebUI/Content/css/skin.css
@@ -218,6 +218,7 @@ article .meta
     border-top: 1px solid #cecece;
     border-bottom: 1px solid #cecece;
     overflow: hidden;
+    clear:left;
 }
 
 #posts-list .entry-date
