--- a/Mission.WebUI/Content/css/style.css
+++ b/Mission.WebUI/Content/css/style.css
@@ -4,6 +4,11 @@
 @import url('comments.css');
 @import url('widgets.css');
 
+a
+{
+    cursor:pointer;
+}
+
 input[type="text"]:focus,
 input[type="password"]:focus
 {
@@ -884,9 +889,10 @@ nav a{
 }
 
 article .meta div{
-	padding: 15px 10px 15px 30px;
+	padding: 15px 10px 15px 10px;
 	float: left;
 	max-width: 170px;
+	
 }
 
 article .meta .comments{
@@ -896,28 +902,17 @@ article .meta .comments{
 
 article .meta .edit{
 	border-left: 1px solid #cecece;	
-	background: url(../img/glyphicons/glyphicons_033_luggage.png) no-repeat;
 }
 
 article .meta .delete{
 	border-left: 1px solid #cecece;	
-	background: url(../img/icon-comments.png) no-repeat;
 }
 
 article .meta .user{
-	background: url(../img/icon-user.png) no-repeat;
 }
 
 article .meta .categories{
-	background: url(../img/glyphicons/glyphicons_045_calendar.png) no-repeat;
 	background-size:24%;
-}
-
-article .meta .categories,
-article .meta .comments,
-article .meta .edit,
-article .meta .delete{
-	background-position: 5px 12px;	
 }
 
 /* SINGLE ------------------------------------------------------------*/
