--- a/Mission.WebUI/Views/Shared/_Layout.cshtml
+++ b/Mission.WebUI/Views/Shared/_Layout.cshtml
@@ -9,6 +9,8 @@
     <link rel="stylesheet" media="all" href="@Url.Content("~/Content/css/style.css")"/>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <!-- Adding "maximum-scale=1" fixes the Mobile Safari auto-zoom bug: http://filamentgroup.com/examples/iosScaleBug/ -->
+    <!-- FONTELLO -->
+    <link rel="stylesheet" type="text/css" href="@Url.Content("~/Content/css/fontello.css")" />
     <!-- JS -->
     <script src="@Url.Content("~/Content/js/jquery-1.6.4.min.js")"></script>
     <script src="@Url.Content("~/Content/js/css3-mediaqueries.js")"></script>
