--- a/Mission.WebUI/Views/Post/Index.cshtml
+++ b/Mission.WebUI/Views/Post/Index.cshtml
@@ -1,12 +1,7 @@
 ﻿@model List<Mission.Domain.Entities.Post>
-
 @{
     ViewBag.Title = "Nyheter";
 }
-
-
-
-
 <div id="posts-list">
     @foreach (var news in Model)
     {
@@ -25,22 +20,18 @@
                 <div class="year">@news.Date.ToString("MMM"),@news.Date.Year</div>
             </div>
             <h2 class="post-heading">
-               @news.Title</h2>
+                @news.Title</h2>
             <div class="excerpt">@MvcHtmlString.Create(@news.Body)</div>
             <div class="meta">
                 <div class="categories">@news.Date.ToString("HH:mm:ss")</div>
                 @if (Mission.WebUI.Infrastructure.AuthorizeHelper.IsAdmin(this.Context))
                 {
-                    <div class="comments">
-                        <a href="#">@Html.ActionLink("Ändra", "Edit", "Post", new { id = news.ID }, null)</a></div>
-                    <div class="user">
-                        <a href="#">@Html.ActionLink("Ta bort", "Delete", "Post", new { id = news.ID }, null)</a></div>
+                    <div class="edit">
+                        <i class="icon-pencil"></i><a href="#">@Html.ActionLink("Ändra", "Edit", "Post", new { id = news.ID }, null)</a></div>
+                    <div class="delete">
+                        <i class="icon-trash"></i><a href="#">@Html.ActionLink("Ta bort", "Delete", "Post", new { id = news.ID }, null)</a></div>
                 }
             </div>
         </article>
     }
 </div>
-
-
-
-
