--- a/Mission.WebUI/Views/Event/Index.cshtml
+++ b/Mission.WebUI/Views/Event/Index.cshtml
@@ -17,11 +17,17 @@
 				<div class="categories">@events.City</div>
                 @if (Mission.WebUI.Infrastructure.AuthorizeHelper.IsAdmin(this.Context))
                 {
-					<div class="comments"><a>@Html.ActionLink("Ändra", "Edit", "Event", new { id = events.ID }, null)</a></div>
-					<div class="user"><a>@Html.ActionLink("Ta bort", "Delete", "Event", new { id = events.ID }, null)</a></div>
-                    <div class=""><a>@Html.ActionLink("Skapa eventfråga", "CreateEventQuestion", "Event", new { id = events.ID}, null)</a></div>
-                    <div class=""><a>@Html.ActionLink("Skapa svar", "CreateAnswer", "Event", new { id = events.ID }, null)</a></div>
-                    <div class=""><a>@Html.ActionLink("Statistik", "EventStatistics", "Event", new { id = events.ID }, null)</a></div>
+					<div class="edit">
+                    <i class="icon-pencil"></i><a>@Html.ActionLink("Ändra", "Edit", "Event", new { id = events.ID }, null)</a></div>
+					<div class="delete">
+                    <i class="icon-trash"></i><a>@Html.ActionLink("Ta bort", "Delete", "Event", new { id = events.ID }, null)</a></div>
+                    <div class="edit">
+                    <i class="icon-pencil"></i><a>@Html.ActionLink("Skapa eventfråga", "CreateEventQuestion", "Event", new { id = events.ID}, null)</a></div>
+                    <div class="edit">
+                    <i class="icon-pencil"></i><a>@Html.ActionLink("Skapa svar", "CreateAnswer", "Event", new { id = events.ID }, null)</a></div>
+                    <div class="edit">
+                    <i class=""></i><a>@Html.ActionLink("Statistik", "EventStatistics", "Event", new { id = events.ID }, null)</a></div>
+                    
                 }
             </div>
 		</article>
