hade glömt länka in stylingen för pagineringsmenyn

--- a/Mission.WebUI/Views/Shared/_Layout.cshtml
+++ b/Mission.WebUI/Views/Shared/_Layout.cshtml
@@ -8,6 +8,7 @@
 			<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
 		<![endif]-->
     <link rel="stylesheet" media="all" href="@Url.Content("~/Content/css/style.css")"/>
+    <link rel="stylesheet" type="text/css" href="@Url.Content("~/Content/PagedList.css")" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <!-- Adding "maximum-scale=1" fixes the Mobile Safari auto-zoom bug: http://filamentgroup.com/examples/iosScaleBug/ -->
