--- a/Mission.WebUI/Views/Shared/_Layout.cshtml
+++ b/Mission.WebUI/Views/Shared/_Layout.cshtml
@@ -104,7 +104,7 @@
                     <li>@Html.ActionLink("Föreläsningar", "Lectures", "Home")</li>            
                     <li>@Html.ActionLink("In Action", "Index", "Post")</li>
                     <li>@Html.ActionLink("Blogg", "Blog", "Post")</li>
-                    <li>@Html.ActionLink("On tour", "index", "Event")</li>
+                    <li>@Html.ActionLink("On tour", "OpenEvents", "Event")</li>
                 </ul>
             </nav>
 
