--- a/Mission.WebUI/Views/Event/_WordCount.cshtml
+++ b/Mission.WebUI/Views/Event/_WordCount.cshtml
@@ -1,9 +1,9 @@
-﻿@model List<Mission.Domain.Entities.Words>
+﻿@model IPagedList<Mission.Domain.Entities.Words>
 @using PagedList.Mvc
 @using PagedList
 <div id="wordlist">
     <table>
-        @foreach (var word in ViewBag.OnePageOfProducts)
+        @foreach (var word in Model)
         {
             <tr>
                 <td style="text-transform: capitalize;">@word.Word</td>
@@ -12,6 +12,6 @@
         }
     </table>
     <div id="selectPage">
-        @Html.PagedListPager((IPagedList)ViewBag.OnePageOfProducts, page => Url.Action("Overview", new { page }))
+        @Html.PagedListPager((IPagedList)Model, page => Url.Action("Overview", new { page }))
     </div>
 </div>
