--- a/Mission.WebUI/Views/Post/Edit.cshtml
+++ b/Mission.WebUI/Views/Post/Edit.cshtml
@@ -16,6 +16,7 @@
             <p>
                 Titel
                 <br />
+                @Html.HiddenFor(p => p.Date)
                 @Html.EditorFor(p => p.Title, new { cols = "30", style = "width:100%", height = "100%" })
             </p>
             @Html.TextAreaFor(p => p.Body, new { id = "elm1", name = "elm1", rows = "10", cols = "30", style = "width:100%", height = "100%" })
