fixat bug med företagsinloggning. buggade när man skrev in ett företagsnamn med stor bokstav i början

--- a/Mission.WebUI/Views/Shared/_LogOn.cshtml
+++ b/Mission.WebUI/Views/Shared/_LogOn.cshtml
@@ -5,8 +5,11 @@
 
 @if (Request.IsAuthenticated)
 {
-    <text>Welcome <strong style="text-transform:capitalize">@User.Identity.Name.ToLower()</strong>!
+    <text><h3>Välkommen <strong style="text-transform:capitalize">@User.Identity.Name.ToLower()</strong>!</h3>
     [ @Html.ActionLink("Log Off", "LogOff", "Account") ]</text>
+    <p>
+        
+    </p>
 }
 else
 {   
