--- a/Mission.WebUI/Views/Home/EditJesperCaron.cshtml
+++ b/Mission.WebUI/Views/Home/EditJesperCaron.cshtml
@@ -19,7 +19,7 @@
             
         </div>
         <div>
-            <input type="submit" value="Spara" />
+            <input type="submit" class="submit-style" value="Spara" />
         </div>
 
 
