--- a/Mission.WebUI/Views/Home/_Subscribe.cshtml
+++ b/Mission.WebUI/Views/Home/_Subscribe.cshtml
@@ -23,7 +23,7 @@
             Stad</label>
     </div>
     <div>
-        <input type="submit" value="Prenumerera" id="submit" />
+        <input type="submit" class="submit-style" value="Prenumerera" />
         <a class="subscribe-link">Avregistrera</a>
     </div>
     <div id="error" class="warning"></div>
