--- a/Mission.WebUI/Views/Post/Edit.cshtml
+++ b/Mission.WebUI/Views/Post/Edit.cshtml
@@ -25,7 +25,7 @@
             </p>
         </div>
         <div>
-            <input type="submit" value="Spara" />
+            <input type="submit" class="submit-style" value="Spara" />
         </div>
 
 
