--- a/Mission.WebUI/Views/Shared/_LogOn.cshtml
+++ b/Mission.WebUI/Views/Shared/_LogOn.cshtml
@@ -42,7 +42,7 @@ using (Html.BeginForm("_LogOn", "Account", FormMethod.Post))
             </div>
 
             <p>
-                <input type="submit" id="submit" value="Log On" />
+                <input type="submit" class="submit-style" value="Logga in" />
             </p>
         
         </fieldset>
