--- a/Mission.WebUI/Views/Home/_Unsubscribe.cshtml
+++ b/Mission.WebUI/Views/Home/_Unsubscribe.cshtml
@@ -16,7 +16,7 @@
             <label>Email</label>
         </div>
         <div>
-            <input type="submit" value="Avregistrera" id="submit" />
+            <input type="submit" class="submit-style" value="Avregistrera" />
             <a class="subscribe-link">Prenumerera</a>
         </div>
         <span id="error" class="warning"></span>
