--- a/Mission.WebUI/Views/Post/CreatePost.cshtml
+++ b/Mission.WebUI/Views/Post/CreatePost.cshtml
@@ -25,7 +25,7 @@
             </p>
         </div>
         <div>
-            <input type="submit" value="Skapa post" />
+            <input type="submit" class="submit-style" value="Skapa post" />
         </div>
 
 
