--- a/Mission.WebUI/Views/Shared/DisplayTemplates/LogOn.cshtml
+++ b/Mission.WebUI/Views/Shared/DisplayTemplates/LogOn.cshtml
@@ -26,7 +26,7 @@
                 @Html.LabelFor(m => m.RememberMe)
             </div>
             <p>
-                <input type="submit" value="Log On" />
+                <input type="submit" class="submit-style" value="Logga in" />
             </p>
         </fieldset>
     </div>
