--- a/Mission.WebUI/Views/Event/EventForCompany.cshtml
+++ b/Mission.WebUI/Views/Event/EventForCompany.cshtml
@@ -15,7 +15,7 @@
 			<div class="meta">
 				<div class="categories">@events.City</div>
                
-                 <div class=""><a>@Html.ActionLink("Statistik", "EventStatistics", "Event", new { id = events.ID }, null)</a></div>
+                 <div class="edit"><i class="icon-trash"></i><a>@Html.ActionLink("Statistik", "EventStatistics", "Event", new { id = events.ID }, null)</a></div>
                 
             </div>
 		</article>
