--- a/Mission.WebUI/Content/css/style.css
+++ b/Mission.WebUI/Content/css/style.css
@@ -1479,3 +1479,5 @@ textarea
 #about ul{list-style-type:disc; margin-left:50px; margin-top:-10px; color:#555555;}
 #about p{margin-top:0px; margin-bottom:10px;}
 
+.presskit{}
+.presskit{max-width: 20%; max-height: 140px; float:left; margin: 4px; box-shadow: 2px 2px 1px slategrey;}
