--- a/Mission.WebUI/Views/Shared/_Layout.cshtml
+++ b/Mission.WebUI/Views/Shared/_Layout.cshtml
@@ -137,8 +137,9 @@
                 </ul>
                 <div id="facebook">
                 </div>
-                <div id="presskit">
-                </div>
+                <a href="../Home/PressKit/">
+                <div id="presskit"></div>
+                </a>
             </div>
             <div id="footerActionplant">
                 <h3>
