knappar css fix & lagt till mer fontello ikoner

--- a/Mission.WebUI/Views/Newsletter/SendMail.cshtml
+++ b/Mission.WebUI/Views/Newsletter/SendMail.cshtml
@@ -22,7 +22,7 @@
     </div>
 }
 
-<h2 class="page-heading"><span>Lägg till kontakt</span></h2>
+<h2 class="page-heading addcontact"><span>Lägg till kontakt</span></h2>
 
 @using (Html.BeginForm())
 {
