--- a/Mission.WebUI/Views/Shared/_CreateComment.cshtml
+++ b/Mission.WebUI/Views/Shared/_CreateComment.cshtml
@@ -13,7 +13,7 @@
     </p>
 
     <div>
-            <input type="submit" value ="Svara"/>
+            <input type="submit" class="submit-style" value ="Svara"/>
     </div>
 
 
