--- a/Mission.WebUI/Content/css/comments.css
+++ b/Mission.WebUI/Content/css/comments.css
@@ -259,7 +259,9 @@
 }
 
 #newsForm input[type="text"],
-#contactForm input, .valid
+#contactForm input[type="text"],
+#contactForm input[type="password"],
+.valid
 #contactForm textarea,
 #commentform input,
 #commentform textarea{
@@ -310,32 +312,8 @@
 #contactForm input[type="button"]{
 	margin: 21px 0px;
 
-	width: auto;
-	color: #444;
-	font-size: 11px;
-	background: #eaeaea;
-	padding: 3px 10px;
-	border: 1px solid #ccc;
-	
-	-webkit-box-shadow: 0px 0px 2px rgba(0,0,0,.3); 
-	-moz-box-shadow: 0px 0px 2px rgba(0,0,0,.3); 
-	-o-box-shadow: 0px 0px 2px rgba(0,0,0,.3);
-	box-shadow: 0px 0px 2px rgba(0,0,0,.3);
-	
-	 -webkit-transition: all 0.3s ease;
-	 -moz-transition: all 0.3s ease;
-	 -o-transition: all 0.3s ease;
-	 transition: all 0.3s ease;
-	 
-	 cursor: pointer;
 }
 
-#contactForm input[type="submit"]:hover,
-#commentform input[type="submit"]:hover,
-#contactForm input[type="button"]:hover{
-	background: #ea4c88;
-	color: #fff;
-}
 
 #contactForm label,
 #commentform label{
