--- a/Mission.WebUI/Content/css/style.css
+++ b/Mission.WebUI/Content/css/style.css
@@ -1044,21 +1044,22 @@ article .meta .categories{
 {
     cursor:pointer;
     color: #ffffff;
-  text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
-  background-color: #49afcd;
-  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#5bc0de), to(#2f96b4));
-  background-image: -webkit-linear-gradient(top, #5bc0de, #2f96b4);
-  background-image: -o-linear-gradient(top, #5bc0de, #2f96b4);
-  background-image: linear-gradient(to bottom, #5bc0de, #2f96b4);
-  background-image: -moz-linear-gradient(top, #5bc0de, #2f96b4);
-  background-repeat: repeat-x;
-  border-color: #2f96b4 #2f96b4 #1f6377;
-  border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
-  filter: progid:dximagetransform.microsoft.gradient(startColorstr='#ff5bc0de', endColorstr='#ff2f96b4', GradientType=0);
-  filter: progid:dximagetransform.microsoft.gradient(enabled=false);
+    text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
+    background-color: #49afcd;
+    background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#5bc0de), to(#2f96b4));
+    background-image: -webkit-linear-gradient(top, #5bc0de, #2f96b4);
+    background-image: -o-linear-gradient(top, #5bc0de, #2f96b4);
+    background-image: linear-gradient(to bottom, #5bc0de, #2f96b4);
+    background-image: -moz-linear-gradient(top, #5bc0de, #2f96b4);
+    background-repeat: repeat-x;
+    border-color: #2f96b4 #2f96b4 #1f6377;
+    border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
+    filter: progid:dximagetransform.microsoft.gradient(startColorstr='#ff5bc0de', endColorstr='#ff2f96b4', GradientType=0);
+    filter: progid:dximagetransform.microsoft.gradient(enabled=false);
     padding: 7px 23px;
     border-radius: 6px;
     font-size: 100%;
+    border:0px;
 }
 
 .submit-style:hover
@@ -1069,8 +1070,13 @@ article .meta .categories{
     background-image: -o-linear-gradient(top, #2f96b4, #5bc0de);
     background-image: linear-gradient(to bottom, #2f96b4, #5bc0de);
     background-image: -moz-linear-gradient(top, #2f96b4, #5bc0de);
+    color:White;
 }
 
+.addcontact
+{
+    margin-top:30px;    
+}
 
 #headline em#corner,
 #sidebar em#corner{
@@ -1092,6 +1098,26 @@ article .meta .categories{
 
 /* FOOTER ------------------------------------------------------------*/
 
+.logoff
+{
+    margin-left: 25px;
+    padding: 5px 13px;
+    background-color: #DA4F49;
+    background-image: linear-gradient(to bottom, #EE5F5B, #BD362F);
+    background-repeat: repeat-x;
+    border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
+    color: #FFFFFF;
+    text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
+}
+.logoff:hover
+{
+    background-image: linear-gradient(to bottom, #BD362F, #EE5F5B);
+}
+
+.submit-style:active
+{
+    box-shadow:inset 0px 0px 2px 0px #000;
+}
 
 .footer-bottom{
 	margin-top: 30px;
@@ -1111,6 +1137,7 @@ footer .wrapper,
 
 
 /* FOOTER BOTTOM ------------------------------------------------------------*/
+
 
 .footer-bottom{
 	margin-bottom: 60px;
