--- a/Mission.WebUI/Views/Home/EditInformation.cshtml
+++ b/Mission.WebUI/Views/Home/EditInformation.cshtml
@@ -21,6 +21,6 @@
             @Html.TextAreaFor(p => p.Information, new { id = "elm1", name = "elm1", rows = "10", cols = "30", style = "width:100%", height = "100%" })
         </div>
         <div>
-            <input type="submit" value="Spara" />
+            <input type="submit" class="submit-style" value="Spara" />
         </div>
     }</div>
