viewbag title och favicon fixad

--- a/Mission.WebUI/Views/Account/ChangePassword.cshtml
+++ b/Mission.WebUI/Views/Account/ChangePassword.cshtml
@@ -1,7 +1,7 @@
 ﻿@model Mission.WebUI.ViewModels.ChangePasswordModel
 
 @{
-    ViewBag.Title = "Change Password";
+    ViewBag.Title = "Ändra Lösenord";
 }
 
 <h2>Change Password</h2>
