--- a/Mission.WebUI/Views/Account/ChangePasswordSuccess.cshtml
+++ b/Mission.WebUI/Views/Account/ChangePasswordSuccess.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewBag.Title = "ChangePasswordSuccess";
+    ViewBag.Title = "Ändra lösenord lyckades!";
 }
 
 <h2>ChangePasswordSuccess</h2>
