--- a/Mission.WebUI/Views/Event/CreateAnswer.cshtml
+++ b/Mission.WebUI/Views/Event/CreateAnswer.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewBag.Title = "CreateAnswer";
+    ViewBag.Title = "Skapa svar";
 }
 @using Mission.WebUI.ViewModels
 @model vm_AnswerEventQuestion
