--- a/Mission.WebUI/Views/Event/CreateEvent.cshtml
+++ b/Mission.WebUI/Views/Event/CreateEvent.cshtml
@@ -1,4 +1,8 @@
 ﻿@model Mission.WebUI.ViewModels.vm_EventUser
+           
+@{
+    ViewBag.Title = "Skapa event";
+}
 
 <script type="text/javascript" src="@Url.Content("~/Content/tinymce/jscripts/tiny_mce/tiny_mce.js")"></script>
 <script type="text/javascript" src="@Url.Content("~/Content/js/LoadTinymce.js")"></script>
