--- a/Mission.WebUI/Views/Event/CreateEventQuestion.cshtml
+++ b/Mission.WebUI/Views/Event/CreateEventQuestion.cshtml
@@ -4,6 +4,7 @@
 @{
     var EventID = Model.Event.ID;
     var Question = "";
+    ViewBag.Title = "Ska event fråga";
 }
 <div>
     <h2>@Model.Event.HeadLine</h2>
