--- a/Mission.WebUI/Views/Event/EventStatistics.cshtml
+++ b/Mission.WebUI/Views/Event/EventStatistics.cshtml
@@ -1,4 +1,7 @@
-﻿<script type="text/javascript" src="https://www.google.com/jsapi"></script>
+﻿@{
+    ViewBag.Title = "Statistik";
+}
+<script type="text/javascript" src="https://www.google.com/jsapi"></script>
 <script type="text/javascript">
     google.load("visualization", "1", { packages: ["corechart"] });
     $(function () {
