--- a/Mission.WebUI/Views/Event/OpenEvents.cshtml
+++ b/Mission.WebUI/Views/Event/OpenEvents.cshtml
@@ -2,6 +2,11 @@
 @model IPagedList<Event>
 @using PagedList
 @using PagedList.Mvc
+
+@{
+    ViewBag.Title = "Event";
+}
+
 <div id="posts-list">
     <h2 class="page-heading">
         <span>Event</span></h2>
