--- a/Mission.WebUI/Views/Event/Overview.cshtml
+++ b/Mission.WebUI/Views/Event/Overview.cshtml
@@ -1,5 +1,9 @@
 ﻿@model Mission.WebUI.ViewModels.WordCountModel
 
+@{
+    ViewBag.Title = "Översikt";
+}
+
 <div class = "statisticsTable">
     <table>
         <tr>
