--- a/Mission.WebUI/Views/Event/SingleEvent.cshtml
+++ b/Mission.WebUI/Views/Event/SingleEvent.cshtml
@@ -1,4 +1,8 @@
 ﻿@model Mission.Domain.Entities.Event
+ @{
+    ViewBag.Title = Model.HeadLine;
+}
+
 <div id="posts-list">
     <h2 class="page-heading">
         <span>Event</span></h2>
