--- a/Mission.WebUI/Views/Home/Index.cshtml
+++ b/Mission.WebUI/Views/Home/Index.cshtml
@@ -1,7 +1,10 @@
 ﻿ @using Mission.Domain.Entities
 @using Mission.WebUI.ViewModels
 @model vm_PostSubscriber 
-   
+
+@{
+    ViewBag.Title = "Jesper Caron";
+}
 <script src = "@Url.Content("~/Content/js/excerpt.js")"></script>       
 
 <div id="slider-holder" class="clearfix">
