--- a/Mission.WebUI/Views/Home/JesperCaron.cshtml
+++ b/Mission.WebUI/Views/Home/JesperCaron.cshtml
@@ -1,7 +1,9 @@
 ﻿@model Mission.WebUI.ViewModels.vm_AboutAndCustomers
 @using Mission.Domain.Entities
 
-
+@{
+    ViewBag.Title = "Jesper Caron";
+}
 <h2 class="page-heading">
     <span>JesperCaron</span></h2>
 <div id="about">
