--- a/Mission.WebUI/Views/Post/Search.cshtml
+++ b/Mission.WebUI/Views/Post/Search.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<Mission.Domain.Entities.SearchResult>
           
 @{
-    ViewBag.Title = "Search";
+    ViewBag.Title = "Sökresultat";
 }
 
 <div class="searchdiv">
