--- a/Mission.WebUI/Views/Account/Register.cshtml
+++ b/Mission.WebUI/Views/Account/Register.cshtml
@@ -1,7 +1,7 @@
 ﻿@model Mission.WebUI.ViewModels.RegisterModel
 
 @{
-    ViewBag.Title = "Register";
+    ViewBag.Title = "Registrera";
 }
 
 <h2>Create a New Account</h2>
