--- a/Mission.WebUI/Views/Event/Edit.cshtml
+++ b/Mission.WebUI/Views/Event/Edit.cshtml
@@ -1,5 +1,10 @@
 ﻿@model Event
 @using Mission.Domain.Entities
+
+@{
+    ViewBag.Title = "Ändra event";
+}
+
 <script type="text/javascript" src="@Url.Content("~/Content/tinymce/jscripts/tiny_mce/tiny_mce.js")"></script>
 <script type="text/javascript" src="@Url.Content("~/Content/js/LoadTinymce.js")"></script>
 <link rel="stylesheet" href="http://code.jquery.com/ui/1.9.2/themes/base/jquery-ui.css" />
