--- a/Mission.WebUI/Views/Event/EventForCompany.cshtml
+++ b/Mission.WebUI/Views/Event/EventForCompany.cshtml
@@ -1,7 +1,7 @@
 ﻿@using Mission.Domain.Entities
 @model List<Event>
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Företags event";
 }
 <div id="posts-list">
     <h2 class="page-heading">
