--- a/Mission.WebUI/Views/Home/EditEducations.cshtml
+++ b/Mission.WebUI/Views/Home/EditEducations.cshtml
@@ -1,5 +1,8 @@
 ﻿@using Mission.Domain.Entities
 @model AboutJesper
+@{
+    ViewBag.Title = "Ändra utbildning";
+}
 <script type="text/javascript" src="@Url.Content("~/Content/tinymce/jscripts/tiny_mce/tiny_mce.js")"></script>
 <script type="text/javascript" src="@Url.Content("~/Content/js/LoadTinymce.js")"></script>
 <link rel="stylesheet" href="http://code.jquery.com/ui/1.9.2/themes/base/jquery-ui.css" />
