--- a/Mission.WebUI/Views/Home/EditPromise.cshtml
+++ b/Mission.WebUI/Views/Home/EditPromise.cshtml
@@ -1,7 +1,7 @@
 ﻿@using Mission.Domain.Entities
 @model AboutJesper
 @{
-    ViewBag.Title = "CreatePost";
+    ViewBag.Title = "Ändra 'Vårt löfte till dig'";
 }
 <script type="text/javascript" src="@Url.Content("~/Content/tinymce/jscripts/tiny_mce/tiny_mce.js")"></script>
 <script type="text/javascript" src="@Url.Content("~/Content/js/LoadTinymce.js")"></script>
