--- a/Mission.WebUI/Views/Post/CreatePost.cshtml
+++ b/Mission.WebUI/Views/Post/CreatePost.cshtml
@@ -1,5 +1,10 @@
 ﻿@using Mission.Domain.Entities
 @model Post
+
+@{
+    ViewBag.Title = "Skapa post";
+}           
+
 <script type="text/javascript" src="@Url.Content("~/Content/tinymce/jscripts/tiny_mce/tiny_mce.js")"></script>
 <script type="text/javascript" src="@Url.Content("~/Content/js/LoadTinymce.js")"></script>
 <link rel="stylesheet" href="http://code.jquery.com/ui/1.9.2/themes/base/jquery-ui.css" />
