--- a/Mission.WebUI/Views/Post/Index.cshtml
+++ b/Mission.WebUI/Views/Post/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@model IPagedList<Mission.Domain.Entities.Post>
 @{
-    ViewBag.Title = "Nyheter";
+    ViewBag.Title = "In Action";
 }
 @using PagedList
 @using PagedList.Mvc
