--- a/Mission.WebUI/Views/Event/OpenEvents.cshtml
+++ b/Mission.WebUI/Views/Event/OpenEvents.cshtml
@@ -4,7 +4,7 @@
 @using PagedList.Mvc
 <div id="posts-list">
     <h2 class="page-heading">
-        <span>Event</span></h2>
+        <span>On Tour</span></h2>
     @foreach (var events in Model)
     { 
     
