--- a/Mission.WebUI/Views/Post/Index.cshtml
+++ b/Mission.WebUI/Views/Post/Index.cshtml
@@ -4,6 +4,8 @@
 }
 @using PagedList
 @using PagedList.Mvc
+<h2 class="page-heading">
+<span>In Action</span></h2>
 <div id="posts-list">
     @foreach (var news in Model)
     {
