--- a/Mission.WebUI/Content/css/style.css
+++ b/Mission.WebUI/Content/css/style.css
@@ -1479,3 +1479,4 @@ overflow:hidden;
 #preview img {max-height:500px;}
 
 #about {background-color:white; padding:20px; box-shadow: 0 0 8px 1px #AAAAAA;}
+#changePassword{margin-top: 150px;}
