--- a/Mission.WebUI/Views/Shared/_LogOn.cshtml
+++ b/Mission.WebUI/Views/Shared/_LogOn.cshtml
@@ -1,26 +1,25 @@
 ﻿@model Mission.WebUI.ViewModels.LogOnModel
-
 <script src="@Url.Content("~/Scripts/jquery.validate.min.js")" type="text/javascript"></script>
 <script src="@Url.Content("~/Scripts/jquery.validate.unobtrusive.min.js")" type="text/javascript"></script>
-
 @if (Request.IsAuthenticated)
 {
-    <text><h3>Välkommen <strong style="text-transform:capitalize">@User.Identity.Name.ToLower()</strong>!</h3>
+    <text><h3>
+        Välkommen <strong style="text-transform: capitalize">@User.Identity.Name.ToLower()</strong>!</h3>
     [ @Html.ActionLink("Log Off", "LogOff", "Account") ]</text>
 
 }
 else
 {   
-    <h3>Login</h3>
-    @*@:[ @Html.ActionLink("Log On", "LogOn", "Account") ]*@
+    <h3>
+        Login</h3>
+@*@:[ @Html.ActionLink("Log On", "LogOn", "Account") ]*@
     
     @Html.ValidationSummary(true, "Login was unsuccessful. Please correct the errors and try again.")
 
-using (Html.BeginForm("_LogOn", "Account", FormMethod.Post))
-{
-        <div id="contactForm">
+    using (Html.BeginForm("_LogOn", "Account", FormMethod.Post))
+    {
+    <div id="contactForm">
         <fieldset>
-        
             <div class="editor-label login-label">
                 Användarnamn
             </div>
@@ -28,7 +27,6 @@ using (Html.BeginForm("_LogOn", "Account", FormMethod.Post))
                 @Html.TextBoxFor(m => m.UserName)
                 @Html.ValidationMessageFor(m => m.UserName)
             </div>
-
             <div class="editor-label login-label">
                 Lösenord
             </div>
@@ -36,22 +34,15 @@ using (Html.BeginForm("_LogOn", "Account", FormMethod.Post))
                 @Html.PasswordFor(m => m.Password)
                 @Html.ValidationMessageFor(m => m.Password)
             </div>
-
             <div class="editor-label login-label">
                 @Html.CheckBoxFor(m => m.RememberMe)
                 Kom ihåg mig
             </div>
-
             <p>
                 <input type="submit" id="submit" value="Log On" />
             </p>
-        
         </fieldset>
-        </div>
+    </div>
     }
 
 }
-
-
-
-
